# urban-dictionary

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
urban_dictionary/: __init__.py  __main__.py  api.py  app.py
