[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = [
    "urban_dictionary/**/*.py"
]

[tool.poetry]
name = "urban-dictionary"
version = "0.1.0"
description = "CLI tool to get Urban Dictionary definitions"
authors = ["stijndcl"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.5"
aiohttp = "^3.8.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.8.23"
flake8-docstrings = "^1.6.0"
flake8-dunder-all = "^0.2.2"
flake8-eradicate = "^1.3.0"
flake8-isort = "^4.2.0"
flake8-simplify = "^0.19.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
